--- a/styles/style.css
+++ b/styles/style.css
@@ -151,5 +151,36 @@ background-image:linear-gradient(purple, #BA55D3);
 }
 
 .astro{
+  position: relative;
   margin-top: 200px;
-  text-align: center;}
+  margin-left: 40%
+}
+
+.soon{
+font-size: 75px;
+position: absolute;
+top: 47%;
+margin-left: 20%;
+display: none;
+}
+
+.bye{
+  border-style: solid;
+  border-radius: 50px;
+  border-color: transparent;
+  width: 200px;
+  text-align: center;
+  margin-left: 45%;
+  margin-top: 40px;
+  background-image:linear-gradient(purple, #BA55D3);
+}
+
+.question{
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.answer{
+  font-size: 20px;
+  display: none;
+}
