--- a/styles/style.css
+++ b/styles/style.css
@@ -204,3 +204,15 @@ display: none;
   font-size: 20px;
   display: none;
 }
+
+.question1:hover {
+  color: purple;
+}
+
+.question2:hover {
+  color: purple;
+}
+
+.question3:hover {
+  color: purple;
+}
